# norman

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  AGENTS.md  CHANGELOG.md  CITATION.cff  CITATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  SAFETY_POLICY.md  SECURITY.md  SUPPORT.md  TODO.md  alembic.ini  ci_cd.yml  config.yaml.dist  dependabot.yml  docker-compose.yaml  docker-compose.yml  generate_key.sh  generate_openapi.py  main.py  mypy.ini  package-lock.json  package.json  pyproject.toml  registry.yaml.dist  requirements-dev.txt  requirements.txt  setup.py  vite.config.js  webpack.config.js
__tests__/: connector_rule_match.test.js
alembic/: env.py
app/: AGENTS.md  TODO.md  __init__.py  app_routes.py  auth_middleware.py  base.html  initial_setup.py  main.py  rate_limit.py  tmux.py  views.py
connectors/: base_connector.py
db/: norman.db  paired_hybrid_replay_cases.json  prompt_bad_route_corpus.json  tui_context_shadow_benchmark_sample.json  tui_memory_retrieval_benchmark_cases.json  tui_quality_benchmark_cases.json  tui_quality_shadow_answers.example.json
docs/: AGENTS.md  access_matrix.md  architecture.md  bot_acl.md  bot_empire.md  community.md  connectors.md  deployment.md  docker.md  dohio_host_bot_lifecycle_runbook.md  endless_perplexity_v1.md  estate_schema.md  examples.md  extending.md  fleet_charter.md  index.md  internal_ca_dohio_runbook.md  llm_runtime_fallback.md  local_llm_node.md  model_durability_plan.md  naming_policy.md  norllama_capability_execution_runner_handoff.md  norllama_model_architecture_audit_handoff.md  norllama_router_guidance.md  norman_chat.md  norman_console_runtime_plan.md  norman_hierarchy.md  norman_kernel_deployment_test_plan.md  norman_kernel_model_policy_deep_dive.md  norman_kernel_program.md  norman_kernel_runtime_deep_dive.md  norman_kernel_tui_deep_dive.md  norman_keys.md  norman_keys_handoff.md  norman_keys_v1_plan.md  norman_prompt_intermediary_roadmap.md  philosophy.md  private_auth_handoff.md  private_enclave.md  tui_operator_workflow_skill_spec.md  (+3 more)
frontend/: AGENTS.md  InfiniteMessages.jsx  main.jsx
scripts/: apply_norman_bot_proxy_live.py  apply_patch_cli.py  apply_switchboard_systemd_migration.sh  audit_codex_auth.py  bbs_doctor.py  bbs_janitor.py  bbs_task_lifecycle.py  browser_auth_local_once.py  build_norman_harness_pro_agent_pack.py  caddy_internal_tls.py  capture_session_inventory.sh  capture_tui_visual_states.py  check_frontdoor_tls.py  compose_soul_context.py  control_plane_skill_gap_audit.py  estate_power_drills.py  fetch_connector_icons.sh  gaphelp_ticket_loop_shadow.py  hal_dashboard_refresh.py  hal_desktop_layout.py  historic_shadow_planner_cases.py  historic_shadow_planner_route_benchmark.py  normanctl.py  (+71 more)
(+910 files in other folders)
